# ruz-client

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  pyproject.toml
src/ruzbot/: bot.py  bot_prototype.py  callbacks.py  commands.py  main.py  markups.py  search_handlers.py  utils.py
src/ruzclient/: __init__.py  __main__.py  auth.py  client.py  errors.py  main.py  settings.py
src/ruzclient/http/: __init__.py  aiohttp_transport.py  httpx_transport.py  transport.py
src/ruzclient/http/endpoints/: __init__.py  disciplines.py  groups.py  lecturers.py  schedule.py  search.py  users.py
tests/: conftest.py  fake_transport.py  test_aiohttp_transport.py  test_client.py  test_client_endpoints.py  test_endpoints_groups.py  test_endpoints_schedule.py  test_endpoints_search.py  test_endpoints_search_users.py  test_httpx_transport.py  test_users_payload_serialization.py
tests/endpoints/: test_auth.py  test_endpoints_disciplines.py  test_endpoints_groups.py  test_endpoints_lecturers.py  test_endpoints_schedule.py  test_endpoints_search.py  test_endpoints_search_users.py  test_search_unicode.py
