[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ruz-client"
version = "1.0.1"
description = "Async client for ruz-server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
  "pytest-asyncio==1.3.0",
  "aioresponses==0.7.8",
  "httpx==0.28.1",
  "python-dotenv==1.2.2",
  "ruff==0.15.10",
]
httpx = [
  "httpx>=0.27.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ruzclient*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
